# rc-brain

./: .clang-format  .devcontainer.json  .devcontainer.json.windows  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.deploy  Dockerfile.dev  Dockerfile.prod  README.md  deploy.sh  entrypoint.sh  install.sh  make_package.sh  package.xml
.github/workflows/: docker-image.yml  lint.yaml
ackermann_filter/: CMakeLists.txt  package.xml
ackermann_filter/src/: ackermann_filter.cpp
autobrake/: CMakeLists.txt  autobrake.py
autobrake/launch/: launch.py
autonomy/: CMakeLists.txt  package.xml
autonomy/config/: cev_localization.yml  imu.yml  lidar_odometry.yaml  robot_localization.yml
autonomy/config/ell_map/: ell_map.pgm  ell_map.yaml  ell_map2.pgm  ell_map2.yaml
autonomy/config/ell_map2/: ell_map2.posegraph
autonomy/config/saved_map/: saved_map.data
autonomy/launch/: launch.py  mux.py  teleop.py
cev_msgs/: CMakeLists.txt  package.xml
cev_msgs/msg/: SensorCollect.msg
config/: encoders.yaml  imu.yaml  robot_localization.yaml  teleop_config.yml
controls/: CMakeLists.txt  package.xml
controls/launch/: autobrake_launch.py  trajectory_launch.py
controls/src/: autobrake_node.cpp  debug_trajectory_publish.cpp  new_autobrake_node.cpp  trajectory_follower.cpp
deprec/rc-controls/rc_controls_autobrake/: CMakeLists.txt  package.xml
deprec/rc-controls/rc_controls_trajectory_follower/: CMakeLists.txt  package.xml
deprec/rc-hardware/: README.md
deprec/rc-hardware/firmware/: onboard.cpp
deprec/rc-local-planner/: README.md
deprec/rc-localization/rc_localization_imu/: README.md
deprec/rc-localization/rc_localization_odometry/: CMakeLists.txt  README.md
deprec/rc-teleop/: README.md
deprec/rc_autonomy/config/: robot_localization.yaml  servo_config.yaml  teleop_config.yaml
encoder_odometry/: CMakeLists.txt  package.xml
encoder_odometry/launch/: launch.py
encoder_odometry/src/: odometry.cpp
firmware/: CMakeLists.txt  onboard.cpp  onboard.cpp.bak
hardware/Onboard/: Onboard.ino
hardware/QuickTest/: QuickTest.ino
hardware/src/: onboard.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
kalman_filter/: CMakeLists.txt  package.xml
kalman_filter/launch/: launch.py
kalman_filter/src/: kalman_filter.cpp
launch/: controls.launch  drive.launch  localization.launch  localization_test.launch  main.launch  operator.launch  teleop.launch  teleoperation.launch
log/: latest_build
msg/: SensorCollect.msg
mux/: CMakeLists.txt  package.xml
mux/launch/: launch.py
mux/src/: mux.cpp
params/: imu_1.yml  imu_2.yml  localization.yaml
rc-controls-controllers/: CMakeLists.txt  package.xml
rc-hardware-actuation/: CMakeLists.txt  servo_actuation.py
rc-hardware-actuation/launch/: servo.launch
rc-hardware-actuation/src/: package.xml  servo_actuation.py
rc-hardware-sensors/: CMakeLists.txt  package.xml
rc-hardware-sensors/encoder/: encoder.ino
rc-hardware-sensors/firmware/: CMakeLists.txt  onboard.cpp
rc-hardware-sensors/msg/: EncoderMsg.msg  SensorCollect.msg
rc-local-planner/: CMakeLists.txt  package.xml
rc-localization/: README.md
rc-localization/rc_localization_icp_benchmark/: CMakeLists.txt
rc-localization/rc_localization_imu/: CMakeLists.txt  package.xml
rc-teleop/launch/: teleop.launch
rc-teleop/src/: gamepads.py
rc_autonomy/: CMakeLists.txt  package.xml
rc_autonomy/config/: encoder_odometry.yaml  imu.yaml  robot_localization.yaml  trajectory_follower.yaml
rc_autonomy/launch/: 2024-05-03_lidar_slam.launch  localization_test.launch  main.launch  rasppi.launch  trajectory_test.launch
rc_controls_autobrake/: README.md
rc_controls_autobrake/src/: autobrake.py  autobrake2.py  autobrake3.py  autobrake_node.py  visualization.py
rc_controls_trajectory_follower/: package.xml
rc_controls_trajectory_follower/config/: test.yaml
rc_controls_trajectory_follower/launch/: test.launch
rc_controls_trajectory_follower/msg/: TrajectoryMsg.msg  TrajectoryPointMsg.msg
rc_controls_trajectory_follower/src/: test_node.py  trajectory_follower.py
rc_locaization_imu/: CMakeLists.txt  package.xml
rc_localization_icp_benchmark/: package.xml
rc_localization_icp_benchmark/test_data/: first.conf  second.conf
rc_localization_odometry/: CMakeLists.txt  package.xml
rc_localization_odometry/launch/: encoder_odom.launch
rc_localization_odometry/msg/: SensorCollect.msg
rc_localization_odometry/params/: encoders.yaml
rc_localization_odometry/src/: encoder_odometry_node.cpp  odometry_node.cpp
rc_trajectory_follower/: CMakeLists.txt  package.xml
rc_trajectory_follower/msg/: TrajectoryMsg.msg  TrajectoryPointMsg.msg
rc_trajectory_follower/src/: open_loop.cpp
rosbag/ackermann_recording_v_1/: metadata.yaml
rosbag/ackermann_recording_v_2/: metadata.yaml
rosbag/ackermann_recording_v_3/: ackermann_recording_v_3_0.db3  metadata.yaml
rosbag/rosbag2_2024_11_12-19_48_24/: metadata.yaml  rosbag2_2024_11_12-19_48_24_0.db3
scripts/: arduino_custom.sh  arduino_deploy.sh  arduino_setup.sh  deploy.sh  deploy_docker.sh  make_package.sh  pwm.py  yaw.py
serial/: package.xml  setup.cfg  setup.py
serial/serial/: arduino_comm.py
serial_com/: CMakeLists.txt  package.xml
serial_com/launch/: launch.py
serial_com/src/: arduino_com.cpp  arduino_read.cpp  arduino_write.cpp
src/: drive_node.py  gamepads.py  interpret_joy.py  movement_handler.py  odometry_node.cpp
t2024_05_03_lidar_slam/: CMakeLists.txt  package.xml
t2024_05_03_lidar_slam/config/: rplidar_node.yaml
t2024_05_03_lidar_slam/launch/: main.launch
teleop/: CMakeLists.txt  package.xml
teleop/launch/: launch.py
teleop/src/: joy_interpreter.cpp
trajectory_follower/: CMakeLists.txt
trajectory_follower/launch/: launch.py
trajectory_follower/src/: debug_trajectory_publish.cpp
vision/: CMakeLists.txt  package.xml  setup.py
vision/config/: occupancy.yaml
vision/launch/: bag.py  launch.py
vision/rviz/: viz.rviz
vision/src/: occupancy.py
vision/vision/: occupancy_transformer.py
(+14 files in other folders)
